--- a/.bowerrc
+++ b/.bowerrc
@@ -1,4 +1,6 @@
 {
   "directory": "bower_components",
-  "registry": "http://bower.herokuapp.com"
+  "registry": "http://bower.herokuapp.com",
+  "proxy":"http://genproxy.amdocs.com:8080",
+  "https-proxy":"http://genproxy.amdocs.com:8080"
 }
