--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "myApp",
+  "name": "angular-modal",
   "version": "1.0.0",
-  "description": "",
+  "description": "Angularjs UI bootstrap modal with unit testing",
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,5 +9,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^3.5.0",
+    "karma": "^0.13.22",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.2.3",
+    "karma-mocha": "^0.2.2",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sinon": "^1.0.4",
+    "mocha": "^2.4.5",
+    "phantomjs": "^2.1.3",
+    "sinon": "^1.17.3"
   }
 }
